Bug#9725 - "disapearing query/hang" and "unknown error" with "on duplicate key update"   INSERT IGNORE...UPDATE causes break in protocol or unknown error message.   Fix so that protocol doesn't break by properly ignoring dups.

mysql-test/r/insert_update.result:
  Test for Bug#9725
mysql-test/t/insert_update.test:
  Test for Bug#9725
sql/sql_insert.cc:
  Ignore the failure in update_row when IGNORE is set.
BitKeeper/etc/logging_ok:
  Logging to logging@openlogging.org accepted